deploy-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: develop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: xicoxavier/kubernets-back
        
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: develop
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
