deploy-bd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: develop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: develop
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
