ingress-homolog.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homolog

---
# backend

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-homolog-deploy
  namespace: homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-homolog
  template:
    metadata:
      labels:
        app: backend-homolog
    spec:
      containers:
      - name: backend-homolog
        image: xicoxavier/back-homolog
        
---

apiVersion: v1
kind: Service
metadata:
  name: backend-homolog-service
  namespace: homolog
spec:
  selector:
    app: backend-homolog
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-homolog-ingress
  namespace: homolog
spec:
  ingressClassName: nginx
  rules:
  - host: api.homolog.10.49.10.42.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-homolog-service
            port:
              number: 3000

---
# frontend

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-homolog-deploy
  namespace: homolog
  labels:
    app: front-homolog
spec:
  selector:
    matchLabels:
      app: front-homolog
  replicas: 1
  template:
    metadata:
      labels:
        app: front-homolog
    spec:
      containers:
       - name: front-homolog
         image: xicoxavier/front-homolog
         ports:
         - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: front-homolog-service
  namespace: homolog
spec:
  type: ClusterIP
  selector:
    app: front-homolog
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homolog-ingress
  namespace: homolog
spec:
  ingressClassName: nginx
  rules:
  - host: homolog.10.49.10.42.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-homolog-service
            port:
              number: 80
